Changed max memory to maven